# Taschenrechner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  calculator  calculator.cpp  calculator_gui.cpp  calculator_gui.h  calculator_gui.ui  main.cpp
include/: Calculator.h
src/: Calculator.cpp  main.cpp
